# comp4-software

./: .gitignore  .travis.yml  .traviss.yml  LICENSE  README.md  app.py  paradigm.sh  requirements.txt
OnPod/FlightComputer/: .cproject  CMakeLists.txt  README.md
OnPod/FlightComputer/Debug/: .gitignore  makefile  objects.mk  sources.mk
OnPod/FlightComputer/Debug/src/: PodInternalNetwork.d  subdir.mk
OnPod/FlightComputer/Host/: objects.mk
OnPod/FlightComputer/Host/src/: subdir.mk
OnPod/FlightComputer/examples/: MainControlLoop.cpp  exampleTest.cpp  nodeSim.cpp
OnPod/FlightComputer/examples/Logger/: client.c  data-received.csv  server.c
OnPod/FlightComputer/include/: CanBusThread.h  CanManager.h  CommanderThread.h  Common.h  CoreControlThread.h  FileHelper.h  FlightComputerInitializer.h  FlightConfigServer.h  GPIOConst.hpp  GPIOManager.hpp  Heartbeat.h  IStateDisplay.hpp  ITaxiBrakingCriteria.hpp  IThreadMonitorManager.h  NavigationThread.h  NetworkHelpers.h  Paradigm.pb.h  Pod.h  SensorConfig.h  SevenSegStateDisplay.hpp  States.h  Structs.h  TaxiBrakingCriteria.hpp  TelemetryManager.h  ThreadMonitor.h  ThreadMonitorFactory.h  ThreadMonitorManager.h  ThreadMonitorStatus.h  ThreadMonitorWrapper.h  UdpConnection.h  UdpTelemetryThread.h  comparingHelpers.h
OnPod/FlightComputer/include/EasyLogger/: easylogging++.h  logging.conf
OnPod/FlightComputer/include/FlightComputer/: CanManager.h  CanParsers.h  Client.h  Commander.h  Common.h  CoreControl.h  Heartbeat.h  MemoryAccess.h  Network.h  NodeConnection.h  NodeServer.h  Pod.h  PodInternalNetwork.h  ProtoStructs.pb.h  ProtoStructs.proto  Structs.h  UdpConnection.h  UdpTelemetryThread.h  nodeSim.h  structs.h
OnPod/FlightComputer/include/ProtoBuffer/: NodeTelem.pb.cc  Paradigm.pb.h  PodCommand.pb.h  PodTelem.pb.h  States.pb.h
OnPod/FlightComputer/include/ProtoBuffer/src/: Makefile  libprotobuf.la  zcgzip
OnPod/FlightComputer/include/ProtoBuffer/src/.libs/: libprotobuf.lai
OnPod/FlightComputer/include/ProtoBuffer/src/google/protobuf/: any.pb.lo  api.pb.lo  descriptor.lo  descriptor_database.lo  duration.pb.lo  dynamic_message.lo  extension_set.lo  field_mask.pb.lo  generated_message_reflection.lo  generated_message_table_driven.lo  message.lo  message_lite.lo  parse_context.lo  repeated_field.lo  (+3 more)
OnPod/FlightComputer/libs/: ProtoBuffer
OnPod/FlightComputer/libs/EasyLogger/: easylogging++.h  logging.conf
OnPod/FlightComputer/libs/ProtoBuffer/: Paradigm.pb.h
OnPod/FlightComputer/libs/ProtoBuffer/src/: libprotobuf-lite.la  libprotoc.la  zcgunzip
OnPod/FlightComputer/libs/ProtoBuffer/src/.deps/: no_warning_test-no_warning_test.Po
OnPod/FlightComputer/libs/ProtoBuffer/src/.libs/: libprotobuf-lite.lai  libprotoc.lai
OnPod/FlightComputer/src/: CanManager.cpp  Client.cpp  Commander.cpp  CommanderThread.cpp  CoreControl.cpp  CoreControl.h  FlightComputer.cpp  FlightComputerInitializer.cpp  FlightComputerInitializer.h  Heartbeat.cpp  IStateDisplay.hpp  MainControlLoop.cpp  MemoryAccess.cpp  Network.h  NetworkHelpers.cpp  NodeServer.cpp  NodeTelem.pb.cc  Paradigm.pb.cc  Pod.cpp  Pod.h  PodInternalNetwork.cpp  PodTelem.pb.cc  ProtoStructs.pb.cc  States.cpp  States.pb.cc  TelemetryManager.cpp  UdpClient.cpp  UdpConnection.cpp  UdpConnection.h  UdpTelemetryThread.cpp  nodeSim.cpp  nodeSim.h  structs.h
OnPod/FlightComputer/src/Communication/: CanManager.cpp  Commander.cpp  FlightConfigServer.cpp  FlightConfigServer.h  UdpConnection.cpp
OnPod/FlightComputer/src/Constants/: Constants.h  SensorConfig.h
OnPod/FlightComputer/src/Helpers/: FileHelper.cpp  GPIOConst.cpp  GPIOManager.cpp  Heartbeat.cpp  IPodValuesLogger.hpp  NetworkHelpers.cpp  PodValuesLogger.cpp  PodValuesLogger.hpp  SevenSegStateDisplay.cpp  SevenSegStateDisplay.hpp  TaxiBrakingCriteria.cpp  easylogging++.cc
OnPod/FlightComputer/src/Models/: FlightConfig.cpp  FlightConfig.h
OnPod/FlightComputer/src/Threads/: CanBusThread.cpp  CommanderThread.cpp  CoreControlThread.cpp  NavigationThread.cpp  UdpTelemetryThread.cpp
OnPod/FlightComputer/src/Threads/ThreadMonitor/: ThreadMonitor.cpp  ThreadMonitorFactory.cpp  ThreadMonitorManager.cpp  ThreadMonitorWrapper.cpp
OnPod/FlightComputer/tests/: Makefile  PodInternalNetworkTests.cpp  catch.hpp  test  test1.cpp  testsMain.cpp
(+1123 files in other folders)
